[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/Counter/Bee/BeeCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/Label/WaveLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/Clock/ClockBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Interface.gd" type="Script" id=4]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -161.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 19.0
color = Color( 0, 0, 0, 0.247059 )

[node name="ClockBar" parent="." instance=ExtResource( 3 )]
margin_left = 117.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 15.0

[node name="WaveLabel" parent="." instance=ExtResource( 2 )]
margin_left = 53.0
margin_top = 4.0
margin_right = 98.0
margin_bottom = 15.0

[node name="BeeCounter" parent="." instance=ExtResource( 1 )]
margin_left = 17.0
margin_top = 4.0
margin_right = 41.0
margin_bottom = 15.0
